--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -275,8 +275,8 @@
  GER_Deep_Water_Navy_desc: "deep water navy is designed for blue water operations, indicating the ability to operate in deep, open ocean environments.  Deep water navies are equipped for power projection, meaning they have the ability to project military force beyond their own borders. This capability may involve carrier strike groups, amphibious assault ships, and other assets that can influence events in distant regions. "
  GER_Basis_See: "The Basis See concept"
  GER_Basis_See_desc: "The Basis See concept is a part of the German Navy (Deutsche Marine) strategic approach. According to this concept, the German Navy aims to support other military forces from the sea, allowing the high seas to be used as a base for military operations. For example, the air defense frigates of the Sachsen class can protect land units deployed near the coast against air attacks"
- GER_asymetrick_threat: "Face Asymetric Threat"
- GER_asymetrick_threat_desc: " Asymmetric threats can come from state or non-state actors and often involve strategies that exploit vulnerabilities, utilize unconventional tactics, or employ technologies in unexpected ways.  The use of unmanned aerial, surface, and underwater vehicles can provide an asymmetric advantage to a force that employs them effectively. These systems can conduct surveillance, reconnaissance, and even deliver weapons without putting human operators at risk."
+ GER_asymmetric_threat: "Face Asymmetric Threat"
+ GER_asymmetric_threat_desc: " Asymmetric threats can come from state or non-state actors and often involve strategies that exploit vulnerabilities, utilize unconventional tactics, or employ technologies in unexpected ways.  The use of unmanned aerial, surface, and underwater vehicles can provide an asymmetric advantage to a force that employs them effectively. These systems can conduct surveillance, reconnaissance, and even deliver weapons without putting human operators at risk."
  GER_Heimatschutz: "Resolute Guard 21"
  GER_Heimatschutz_desc: "This exercise, which took place at the Kiel naval base, involved only reservists. The Marine decided to train new object protection forces, primarily consisting of reservists, in response to military conflicts in close proximity to Germany. This was a first for the Bundeswehr2. The reservists are expected to take over the protection of naval bases, the naval air base, naval radio stations, and the operations center of the Marine Command"
  GER_Reform_Fleet: "Realignment of the Navy"
@@ -2620,9 +2620,9 @@
  GER_belgian_invasion: "Dissolve Belgium"
  GER_belgian_invasion_desc: "Realistically, Belgium is not a state. It holds many different ethnic groups within its borders, including Germans. We can finally bring our fellow countrymen home by eradicating this supposed state."
  GER_italian_invasion: "Strike Italy"
- GER_italian_invasion_desc: "Italy has shown that it's army is filled with incompetance, and disorder. Because of this, we can rest assured that any sort of resistance by the Italian army can be quickly crushed."
+ GER_italian_invasion_desc: "Italy has shown that it's army is filled with incompetence, and disorder. Because of this, we can rest assured that any sort of resistance by the Italian army can be quickly crushed."
  GER_german_war_machine: "The German War Machine"
- GER_german_war_machine_desc: "The German war machine has been awakened once more, and it is now ready to operate at maximum capacitity!"
+ GER_german_war_machine_desc: "The German war machine has been awakened once more, and it is now ready to operate at maximum capacity!"
  GER_our_agents_everywhere: "Our Agents Everywhere"
  GER_our_agents_everywhere_desc: "By scattering our agents throughout Europe, we will be able to spread Pro-German sentiment and crush the spirits of those who are willing to resistance German Occupation."
  GER_militarized_riot_police: "Militarized Riot Police"
