--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -279,7 +279,11 @@
  HOL_European_Navy_desc: "The Netherlands will play a leading role in the formation of a European Navy, fostering greater naval cooperation and integration among EU member states. This initiative aims to enhance collective maritime security, streamline defense resources, and project European naval power on the global stage."
  HOL_Expanding_Naval_Infrastructure: "Expanding Naval Infrastructure"
  HOL_Expanding_Naval_Infrastructure_desc: " The Netherlands is committed to enhancing its naval presence by expanding its network of naval bases. This focus involves the development of new bases and the upgrading of existing facilities around the Dutch coastline and overseas territories. These expanded bases will provide strategic support for naval operations, improve logistics, and ensure rapid response capabilities."
+ HOL_F35C_Development: "F35C Development"
+ HOL_F35C_Development_desc: "The procurement of the F-35C Lightning II aircraft provides the Dutch Air Force with a carrier-capable variant of the advanced stealth fighter. This focus enhances the Netherlands' ability to project air power from both land bases and aircraft carriers, offering unmatched versatility and combat effectiveness."
  HOL_F35C_Development_tt: "When §Y5th Generation Light Aircraft§! is researched, §G50§! §YF-35C§! will be added to your stockpile."
+ HOL_Future_Air_Defender: "Future Air Defender"
+ HOL_Future_Air_Defender_desc: "The Future Air Defender program is a collaborative effort between the Netherlands and Germany to develop advanced naval air defense capabilities. This initiative focuses on equipping Dutch and German naval vessels with state-of-the-art radar systems, anti-aircraft missiles, and integrated command and control technology."
  HOL_Multi_Ocean_Training: "Multi-Ocean Training"
  HOL_Multi_Ocean_Training_desc: "To prepare for diverse maritime challenges, the Dutch Navy will conduct extensive training exercises across multiple oceans. These exercises will improve interoperability with allied navies and enhance the operational readiness of Dutch naval forces in various environments."
  HOL_Carrier_Development: "Carrier Development"
@@ -320,6 +324,8 @@
  HOL_Hollandklasse_Frigate_tt: "Completing this focus will trigger a collaboration offer to §Y[BEL.GetNameWithFlag]§! to jointly §Yproduce§! §G6§! Hollandklasse §Yfrigates§!, once you researched §YFrigate 2015§! with §G15%§! §Yproduction§! progress for both nations if accepted."
  HOL_Vrouwenklasse_Destroyer: "Vrouwenklasse Development"
  HOL_Vrouwenklasse_Destroyer_desc: "Introducing the Vrouwenklasse Anti-Submarine Frigates, the Netherlands aims to build a fleet of highly advanced and versatile frigates. These ships will feature cutting-edge missile systems, superior radar, and robust electronic warfare capabilities. The Vrouwenklasse frigates are designed to excel in both offensive and defensive naval operations, ensuring the Dutch Navy remains a formidable force."
+ HOL_Vlissingenklasse_Development: "Vlissingenklasse Development"
+ HOL_Vlissingenklasse_Development_desc: "The Vlissingenklasse development project focuses on creating a new class of multi-role ships capable of performing various missions, from humanitarian aid to combat operations. These vessels will be equipped with modular systems, allowing for rapid reconfiguration based on mission requirements. The Vlissingenklasse will enhance the flexibility and adaptability of the Dutch Navy."
  ##################################################### Ideas #####################################################
  HOL_NAM1: "Nederlandse Aardolie Maatschappij"
  HOL_NAM1_desc: "The Nederlandse Aardolie Maatschappij (NAM) is a Dutch oil and gas company founded in 1947 as a joint venture between Shell and ExxonMobil. NAM is the largest producer of natural gas in the Netherlands, responsible for the exploration, production, and distribution of natural gas and oil, primarily from the Groningen gas field. The company has played a significant role in the Dutch energy sector for decades."
