more designer work for combat rework

--- a/localisation/english/tank_modules_l_english.yml
+++ b/localisation/english/tank_modules_l_english.yml
@@ -101,13 +101,10 @@
  EQ_MOD_CAT_medium_gun_ammo_module_TITLE: "Medium Howitzer Ammo"
  EQ_MOD_CAT_big_gun_ammo_module_TITLE: "Heavy Howitzer Ammo"
  EQ_MOD_CAT_medium_gun_feature_module_TITLE: "Medium Howitzer Features"
- EQ_MOD_CAT_chassis_wheeled_afv_module_TITLE: "Wheeled AFV Chassis"
- EQ_MOD_CAT_chassis_light_tank_module_TITLE: "Light Tank Chassis"
- EQ_MOD_CAT_chassis_tracked_afv_module_TITLE: "Tracked AFV Chassis"
+ EQ_MOD_CAT_chassis_wheeled_afv_module_TITLE: "Wheeled Chassis"
+ EQ_MOD_CAT_chassis_tracked_afv_module_TITLE: "Tracked Chassis"
  EQ_MOD_CAT_light_tank_low_velocity_guns_TITLE: "High-Caliber Low-Velocity Guns"
  EQ_MOD_CAT_spaa_chassis_truck_module_TITLE: "Truck Chassis"
- EQ_MOD_CAT_spaa_chassis_tank_module_TITLE: "Tank Chassis"
- EQ_MOD_CAT_spaa_chassis_afv_module_TITLE: "AFV Chassis"
  EQ_MOD_CAT_spaa_support_missile_system_category_TITLE: "Support Missiles"
  EQ_MOD_CAT_spaa_auxiliary_autocannon_category_TITLE: "Secondary Autocannons"
  EQ_MOD_CAT_spaa_coax_machinegun_category_TITLE: "Additional Machine Guns"
@@ -805,7 +802,7 @@
  spaa_light_autocannon4_desc: "Advanced alloys and a higher cyclic rate solidify its position as a frontrunner in swift and efficient aerial engagements."
  spaa_light_autocannon5: "Futuristic Light Autocannon"
  spaa_light_autocannon5_desc: "Harnessing state-of-the-art manufacturing techniques, this cannon offers the pinnacle of speed and efficiency, setting the benchmark in rapid-response systems."
- EQ_MOD_CAT_spaa_autocannon_systems_TITLE: "Autocannon"
+ EQ_MOD_CAT_spaa_autocannon_systems_TITLE: "SPAA Autocannon"
  spaa_autocannon_1: "Post WW2 Autocannon"
  spaa_autocannon_1_desc: "Offering a harmonious blend of power and speed, this versatile cannon is an all-rounder, suitable for a diverse range of combat situations."
  spaa_autocannon_2: "Cold War Autocannon"
