Naval Tree Done

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -260,6 +260,8 @@
  HOL_Expand_Patriot_Systems_desc: "Expanding the deployment of Patriot missile systems improves the Dutch Army's capability to defend against ballistic missiles and advanced aerial threats. This focus enhances national and regional security by providing a robust air and missile defense network."
  HOL_Expand_Command_Control_Centers: "Expand Command & Control Centers"
  HOL_Expand_Command_Control_Centers_desc: " Expanding and modernizing command and control centers enhances the Dutch Army's operational coordination and decision-making capabilities. This focus includes upgrading communication systems and integrating advanced technology to ensure efficient command of military operations."
+ HOL_Establish_Marechaussee_Squad: "Establish Marechaussee Squad"
+ HOL_Establish_Marechaussee_Squad_desc: "The Marechaussee is a special military police force responsible for enforcing law and maintaining logistical operations. Establishing this unit will greatly improve both supply efficiency and suppression in our military operations."
  HOL_Modernize_Foxtrot: " Modernize Foxtrot Communication Systems"
  HOL_Modernize_Foxtrot_desc: "The modernization of the Foxtrot communication systems focuses on upgrading the Dutch Army's tactical communication infrastructure. This includes the implementation of secure, high-speed data links, advanced encryption, and enhanced interoperability with NATO allies. By modernizing these systems, the Dutch Army ensures reliable and secure communications in various operational environments."
  HOL_Special_Forces_Helicopter: "Special Operations Forces Helicopter"
@@ -854,15 +856,14 @@
  HOL_ING_Group_Strategies_Expansion_Speciality3_desc: "Corporate clients are a key focus of ING’s business. By specializing in wholesale banking, ING will enhance its ability to offer customized financial solutions to large enterprises, driving corporate growth and revenue."
  HOL_ING_Group_Strategies_Expansion_Speciality4: "ING Wealth Services"
  HOL_ING_Group_Strategies_Expansion_Speciality4_desc: "Wealth management offers high returns and long-term client relationships. Specializing in wealth management will allow ING to cater to high-net-worth individuals, increasing wealth income taxation and broadening its personal finance services."
- 
- ##################################################### Battalion #####################################################
- HOL_marechaussee_support_tech: "Marechaussee Support Battalion"
- HOL_marechaussee_support_tech_desc: "The Marechaussee Support Battalion combines logistics and military police capabilities, improving supply efficiency and increasing suppression."
+ #################################################### Battalion #####################################################
  HOL_marechaussee_support_company: "Marechaussee Support Battalion"
  HOL_marechaussee_support_company_desc: "This special support battalion offers both supply chain management and law enforcement functions in the battlefield, improving logistics and providing suppression."
- HOL_Establish_Marechaussee_Squad: "Establish Marechaussee Squad"
- HOL_Establish_Marechaussee_Squad_desc: "The Marechaussee is a special military police force responsible for enforcing law and maintaining logistical operations. Establishing this unit will greatly improve both supply efficiency and suppression in our military operations."
-
+ ##################################################### Technologies #####################################################
+ HOL_Submarine_Drones_MTG_tech : "Submarine Drones"
+ HOL_Submarine_Drones_NonMTG_tech: "Submarine Drones"
+ HOL_marechaussee_support_tech: "Marechaussee Support Battalion"
+ HOL_marechaussee_support_tech_desc: "The Marechaussee Support Battalion combines logistics and military police capabilities, improving supply efficiency and increasing suppression."
  ##################################################### MIO #####################################################
  HOL_van_halteren_armor_manufacturer: "Van Halteren Defence"
  HOL_van_halteren_armor_manufacturer_desc: "Van Halteren Defence, known for its expertise in the development of armored vehicle components and defense systems, provides cutting-edge solutions to modernize and enhance the capabilities of the Dutch armed forces."
