--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -704,13 +704,13 @@
  # Internal Faction Monthly Tick Rate
  RULE_INTERNAL_FACTION_TICK_AMOUNT: "§YInternal Faction§! Opinion Monthly Tick Amount"
  RULE_OPTION_IF_POINT_10: "0.10 Opinion Monthly"
- RULE_OPTION_IF_POINT_10_DESC: "The §YInternal Faction§! Monthly Tick rate will be set to 0.10 instead of the Default 0.50. Millennium Dawn's custom achievements will be disabled with this setting."
+ RULE_OPTION_IF_POINT_10_DESC: "The §YInternal Faction§! Opinion Monthly Tick rate will be set to 0.10 instead of the Default 0.50. Millennium Dawn's custom achievements will be disabled with this setting."
  RULE_OPTION_IF_POINT_25: "0.25 Opinion Monthly"
- RULE_OPTION_IF_POINT_25_DESC: "The §YInternal Faction§! Monthly Tick rate will be set to 0.25 instead of the Default 0.50. Millennium Dawn's custom achievements will be disabled with this setting."
+ RULE_OPTION_IF_POINT_25_DESC: "The §YInternal Faction§! Opinion Monthly Tick rate will be set to 0.25 instead of the Default 0.50. Millennium Dawn's custom achievements will be disabled with this setting."
  RULE_OPTION_IF_POINT_50: "0.50 Opinion Monthly"
- RULE_OPTION_IF_POINT_50_DESC: "The §YInternal Faction§! Monthly Tick rate will be set to the default 0.50"
+ RULE_OPTION_IF_POINT_50_DESC: "The §YInternal Faction§! Opinion Monthly Tick rate will be set to the default 0.50"
  RULE_OPTION_IF_POINT_75: "0.75 Opinion Monthly"
- RULE_OPTION_IF_POINT_75_DESC: "The §YInternal Faction§! Monthly Tick rate will be set to 0.75 instead of the Default 0.50"
+ RULE_OPTION_IF_POINT_75_DESC: "The §YInternal Faction§! Opinion Monthly Tick rate will be set to 0.75 instead of the Default 0.50"
 
  # FOREIGN POLICY
  RULE_ALLOW_RECALL_INTERVENTION_FORCES: "Allow Recalling of Intervention Forces"
