--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -344,6 +344,8 @@
  HOL_Submarine_Drones_desc: "Embracing the future of naval warfare, the Netherlands is investing in submarine drones to support its undersea operations. These autonomous and remotely operated vehicles will conduct surveillance, reconnaissance, and mine-clearing missions. The integration of submarine drones will augment the capabilities of the Dutch submarine fleet and provide a significant tactical advantage."
  HOL_Damen_Industry_Expansion: "Damen Industrial Expansion"
  HOL_Damen_Industry_Expansion_desc: " Partnering with Damen Shipyards, the Netherlands is expanding its shipbuilding industry to meet the growing demands of its naval modernization programs. This expansion includes upgrading shipbuilding facilities, investing in research and development, and increasing production capacity. The Damen Industry Expansion will ensure the Netherlands remains a leading maritime nation with cutting-edge naval technology."
+ HOL_Legendary_Dockyards: "Dutch Legendary Dockyards"
+ HOL_Legendary_Dockyards_desc: "The resurgence of Dutch naval craftsmanship will yield incredible results: improved ship production capabilities, faster construction times, and stronger naval designs. As the legendary dockyards are revived, the Netherlands will cement its status as a leader in modern naval warfare."
  ##################################################### Ideas #####################################################
  HOL_NAM1: "Nederlandse Aardolie Maatschappij"
  HOL_NAM1_desc: "The Nederlandse Aardolie Maatschappij (NAM) is a Dutch oil and gas company founded in 1947 as a joint venture between Shell and ExxonMobil. NAM is the largest producer of natural gas in the Netherlands, responsible for the exploration, production, and distribution of natural gas and oil, primarily from the Groningen gas field. The company has played a significant role in the Dutch energy sector for decades."
@@ -782,51 +784,51 @@
  HOL_marines_relocation.01.a: "This is a strategic decision that will benefit our national security."
  HOL_marines_relocation.01.b: "We need to carefully consider the implications of this move."
  HOL_marines_relocation.01.c: "This plan is too controversial and should be abandoned."
- HOL_marines_relocation.02A.t: "Heated Parliamentary Debate on Marine Relocation"
- HOL_marines_relocation.02A.d: "The Dutch Parliament is abuzz with debate over the proposed relocation of the Marines to Vlissingen. Supporters argue it will enhance national security and bring economic benefits to the region. Critics, however, raise concerns about the financial cost and potential disruption to local communities."
- HOL_marines_relocation.02A.a: "We must proceed with the relocation for the greater good."
- HOL_marines_relocation.02A.b: "Let's find a middle ground that addresses all concerns."
- HOL_marines_relocation.02A.c: "It's best to halt these plans and explore other options."
- HOL_marines_relocation.02B.t: "Public Inquiry on Marine Relocation"
- HOL_marines_relocation.02B.d: "Following the public outcry and parliamentary debate, the government has decided to conduct a public inquiry to gather more information and public input on the proposed relocation of the Marines to Vlissingen."
- HOL_marines_relocation.02B.a: "The inquiry will provide us with the necessary insights."
- HOL_marines_relocation.02B.b: "This is delaying our strategic decisions. Halt the inquiry."
- HOL_marines_relocation.03A.t: "Public Reaction to Marine Relocation Plans"
- HOL_marines_relocation.03A.d: "Public opinion is divided over the Marines' relocation to Vlissingen. Local residents express concerns about the potential impact on their community, while national security advocates praise the strategic benefits. Protests and rallies are organized by both supporters and opponents of the move."
- HOL_marines_relocation.03A.a: "We must address the concerns of the local population."
- HOL_marines_relocation.03A.b: "Educate the public on the benefits of this relocation."
- HOL_marines_relocation.03A.c: "The government knows best and will proceed as planned."
- HOL_marines_relocation.03B.t: "Compromise Plan on Marine Relocation"
- HOL_marines_relocation.03B.d: "In an effort to address both support and opposition, a compromise plan has been proposed. This includes additional investments in local infrastructure to support the move and mitigate its impact on the community."
- HOL_marines_relocation.03B.a: "This plan balances all interests and should be approved."
- HOL_marines_relocation.03B.b: "We need more time to consider this compromise."
- HOL_marines_relocation.03B.c: "This compromise is unsatisfactory. We need a new plan."
- HOL_marines_relocation.03C.t: "Results of Public Inquiry on Marine Relocation"
- HOL_marines_relocation.03C.d: "The public inquiry has concluded, presenting detailed insights into the potential benefits and drawbacks of relocating the Marines to Vlissingen. The report highlights both the strategic advantages and the concerns of the local community."
- HOL_marines_relocation.03C.a: "The inquiry supports the strategic benefits. Proceed with the relocation."
- HOL_marines_relocation.03C.b: "Adjust the relocation strategy based on the inquiry's feedback."
- HOL_marines_relocation.03C.c: "The concerns raised are too significant. Cancel the relocation."
- HOL_marines_relocation.04A.t: "Community Dialogue on Marine Relocation"
- HOL_marines_relocation.04A.d: "The government has initiated a series of dialogues with local communities in Vlissingen to address their concerns and provide more information about the benefits of the relocation."
- HOL_marines_relocation.04A.a: "Invest in local initiatives to gain support."
- HOL_marines_relocation.04A.b: "Ensure all processes are transparent and inclusive."
- HOL_marines_relocation.04B.t: "National Information Campaign on Marine Relocation"
- HOL_marines_relocation.04B.d: "A nationwide information campaign has been launched to educate the public on the strategic benefits of relocating the Marines to Vlissingen."
- HOL_marines_relocation.04B.a: "Allocate more resources to reach a wider audience."
- HOL_marines_relocation.04B.b: "Focus the campaign on regions with the most opposition."
- HOL_marines_relocation.04D.t: "Economic Impact of the Compromise Plan"
- HOL_marines_relocation.04D.d: "The compromise plan includes additional investments in local infrastructure and mitigating measures to address community concerns. Economists have evaluated the potential economic benefits and costs associated with this plan."
- HOL_marines_relocation.04D.a: "This plan balances all interests and should be approved."
- HOL_marines_relocation.04D.b: "We need more time to consider this compromise."
- HOL_marines_relocation.04E.t: "Extended Review of the Compromise Plan"
- HOL_marines_relocation.04E.d: "The extended review of the compromise plan has concluded, providing deeper insights and further public feedback. The government must now decide whether to proceed with the compromise or seek new alternatives."
- HOL_marines_relocation.04E.a: "Proceed with the Compromise"
- HOL_marines_relocation.04E.b: "Seek New Alternatives"
- HOL_marines_relocation.05A.t: "Government's Final Decision on Marine Relocation"
- HOL_marines_relocation.05A.d: "After months of debate and public discourse, the government is set to make its final decision on the Marines' relocation to Vlissingen. The choice will have long-lasting implications for national security, economic development, and public trust in the government."
- HOL_marines_relocation.05A.a: "The Marines will move to Vlissingen as planned."
- HOL_marines_relocation.05A.b: "Adjust the relocation strategy based on public and parliamentary feedback."
- HOL_marines_relocation.05A.c: "The Marines will remain at their current bases."
+ HOL_marines_relocation.02.t: "Heated Parliamentary Debate on Marine Relocation"
+ HOL_marines_relocation.02.d: "The Dutch Parliament is abuzz with debate over the proposed relocation of the Marines to Vlissingen. Supporters argue it will enhance national security and bring economic benefits to the region. Critics, however, raise concerns about the financial cost and potential disruption to local communities."
+ HOL_marines_relocation.02.a: "We must proceed with the relocation for the greater good."
+ HOL_marines_relocation.02.b: "Let's find a middle ground that addresses all concerns."
+ HOL_marines_relocation.02.c: "It's best to halt these plans and explore other options."
+ HOL_marines_relocation.03.t: "Public Inquiry on Marine Relocation"
+ HOL_marines_relocation.03.d: "Following the public outcry and parliamentary debate, the government has decided to conduct a public inquiry to gather more information and public input on the proposed relocation of the Marines to Vlissingen."
+ HOL_marines_relocation.03.a: "The inquiry will provide us with the necessary insights."
+ HOL_marines_relocation.03.b: "This is delaying our strategic decisions. Halt the inquiry."
+ HOL_marines_relocation.04.t: "Public Reaction to Marine Relocation Plans"
+ HOL_marines_relocation.04.d: "Public opinion is divided over the Marines' relocation to Vlissingen. Local residents express concerns about the potential impact on their community, while national security advocates praise the strategic benefits. Protests and rallies are organized by both supporters and opponents of the move."
+ HOL_marines_relocation.04.a: "We must address the concerns of the local population."
+ HOL_marines_relocation.04.b: "Educate the public on the benefits of this relocation."
+ HOL_marines_relocation.04.c: "The government knows best and will proceed as planned."
+ HOL_marines_relocation.05.t: "Compromise Plan on Marine Relocation"
+ HOL_marines_relocation.05.d: "In an effort to address both support and opposition, a compromise plan has been proposed. This includes additional investments in local infrastructure to support the move and mitigate its impact on the community."
+ HOL_marines_relocation.05.a: "This plan balances all interests and should be approved."
+ HOL_marines_relocation.05.b: "We need more time to consider this compromise."
+ HOL_marines_relocation.05.c: "This compromise is unsatisfactory. We need a new plan."
+ HOL_marines_relocation.06.t: "Results of Public Inquiry on Marine Relocation"
+ HOL_marines_relocation.06.d: "The public inquiry has concluded, presenting detailed insights into the potential benefits and drawbacks of relocating the Marines to Vlissingen. The report highlights both the strategic advantages and the concerns of the local community."
+ HOL_marines_relocation.06.a: "The inquiry supports the strategic benefits. Proceed with the relocation."
+ HOL_marines_relocation.06.b: "Adjust the relocation strategy based on the inquiry's feedback."
+ HOL_marines_relocation.06.c: "The concerns raised are too significant. Cancel the relocation."
+ HOL_marines_relocation.07.t: "Community Dialogue on Marine Relocation"
+ HOL_marines_relocation.07.d: "The government has initiated a series of dialogues with local communities in Vlissingen to address their concerns and provide more information about the benefits of the relocation."
+ HOL_marines_relocation.07.a: "Invest in local initiatives to gain support."
+ HOL_marines_relocation.07.b: "Ensure all processes are transparent and inclusive."
+ HOL_marines_relocation.08.t: "National Information Campaign on Marine Relocation"
+ HOL_marines_relocation.08.d: "A nationwide information campaign has been launched to educate the public on the strategic benefits of relocating the Marines to Vlissingen."
+ HOL_marines_relocation.08.a: "Allocate more resources to reach a wider audience."
+ HOL_marines_relocation.08.b: "Focus the campaign on regions with the most opposition."
+ HOL_marines_relocation.09.t: "Economic Impact of the Compromise Plan"
+ HOL_marines_relocation.09.d: "The compromise plan includes additional investments in local infrastructure and mitigating measures to address community concerns. Economists have evaluated the potential economic benefits and costs associated with this plan."
+ HOL_marines_relocation.09.a: "This plan balances all interests and should be approved."
+ HOL_marines_relocation.09.b: "We need more time to consider this compromise."
+ HOL_marines_relocation.10.t: "Extended Review of the Compromise Plan"
+ HOL_marines_relocation.10.d: "The extended review of the compromise plan has concluded, providing deeper insights and further public feedback. The government must now decide whether to proceed with the compromise or seek new alternatives."
+ HOL_marines_relocation.10.a: "Proceed with the Compromise"
+ HOL_marines_relocation.10.b: "Seek New Alternatives"
+ HOL_marines_relocation.11.t: "Government's Final Decision on Marine Relocation"
+ HOL_marines_relocation.11.d: "After months of debate and public discourse, the government is set to make its final decision on the Marines' relocation to Vlissingen. The choice will have long-lasting implications for national security, economic development, and public trust in the government."
+ HOL_marines_relocation.11.a: "The Marines will move to Vlissingen as planned."
+ HOL_marines_relocation.11.b: "Adjust the relocation strategy based on public and parliamentary feedback."
+ HOL_marines_relocation.11.c: "The Marines will remain at their current bases."
  HOL_marines_relocation.05B.t: "Approval of New Marine Relocation Plan"
  HOL_marines_relocation.05B.d: "The newly developed plan for the relocation of the Marines to Vlissingen has been finalized and is ready for approval. This plan includes comprehensive measures to address all previously raised concerns."
  HOL_marines_relocation.05B.a: "The new plan addresses all issues. Proceed with relocation."
