Romania Focus Tree

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1026,6 +1026,22 @@
  UZB_nationalist_DEF: "Uzbekistan"
  UZB_nationalist_ADJ: "Uzbek"
 
+ TRA_fascism: "Transylvania"
+ TRA_fascism_DEF: "Transylvania"
+ TRA_democratic: "Transylvania"
+ TRA_democratic_DEF: "Transylvania"
+ TRA_neutrality: "Transylvania"
+ TRA_neutrality_DEF: "Transylvania"
+ TRA_communism: "Transylvania"
+ TRA_communism_DEF: "Transylvania"
+ TRA_fascism_ADJ: "Transylvanian"
+ TRA_democratic_ADJ: "Transylvanian"
+ TRA_neutrality_ADJ: "Transylvanian"
+ TRA_communism_ADJ: "Transylvanian"
+ TRA_nationalist: "Transylvania"
+ TRA_nationalist_DEF: "Transylvania"
+ TRA_nationalist_ADJ: "Transylvanian"
+
  TRK_fascism: "Emirate of Turkmenistan"
  TRK_fascism_DEF: "The Emirate of Turkmenistan"
  TRK_democratic: "Turkmenistan"
@@ -3513,6 +3529,22 @@
  SER_nationalist: "Serbia"
  SER_nationalist_DEF: "Serbia"
  SER_nationalist_ADJ: "Serbian"
+ 
+ WLC_neutrality: "Wallachia"
+ WLC_neutrality_DEF: "Wallachia"
+ WLC_democratic: "Wallachia"
+ WLC_democratic_DEF: "Wallachia"
+ WLC_fascism: "Wallachia"
+ WLC_fascism_DEF: "Wallachia"
+ WLC_communism: "Wallachia"
+ WLC_communism_DEF: "Wallachia"
+ WLC_nationalist: "Wallachia"
+ WLC_nationalist_DEF: "Wallachia"
+ WLC_neutrality_ADJ: "Wallachian"
+ WLC_democratic_ADJ: "Wallachian"
+ WLC_fascism_ADJ: "Wallachian"
+ WLC_communism_ADJ: "Wallachian"
+ WLC_nationalist_ADJ: "Wallachian"
 
  ICE_fascism: "Iceland"
  ICE_fascism_DEF: "Iceland"
