--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -21,7 +21,7 @@
  TAJ_woes_of_the_civilwar: "Woes of the Civil War"
  TAJ_woes_of_the_civilwar_desc: "In 1992, our state collapsed into a 5 year long civil war, where Tajik fought against Tajik. Opposition groups to the central government unified under the UTO (Unitied Tajik Opposition), with some secession movements arising in the [BDA.GetFlag] Badakhshan region. Once the Civil War was concluded, the £TAJ_emerging_reactionary  People's Democratic Party signed a treaty with multiple groups from the UTO, such as the £TAJ_kingdom  Islamic Renaissance Party and the £TAJ_western_conservative Democratic Party of Tajikistan, granting some concessions in exchange for a ceasefire.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we conclude the [BDA.GetFlag] §HBadakhshan Conflict§!."
  TAJ_201st_base: "201st Military Base"
- TAJ_201st_base_desc: "The 201st Military Base has been critical in our nations short history thus far, as the base serves as a hub of [SOV.GetFlag] Russian influence, and protection even though we do not border them. The 201st Rifle Division of the [SOV.GetFlag] Russian army is currently stationed in the base, and they offer our troops occasional training against a potential [TAL.GetFlag] [AFG.GetFlag] Afghan invasion of [TAJ.GetFlag] Tajikistan. They also pay us a lease which contributes towards our economy.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we §HEnd the Lease§!, or we enter §HConflict with [SOV.GetFlag] Russia§!."
+ TAJ_201st_base_desc: "The 201st Military Base has been critical in our nations short history thus far, as the base serves as a hub of [SOV.GetFlag] Russian influence, and protection even though we do not border them. The 201st Rifle Division of the [SOV.GetFlag] Russian army is currently stationed in the base, and they offer our troops occasional training against a potential [TAL.GetFlag] [AFG.GetFlag] Afghan invasion of [TAJ.GetFlag] Tajikistan. They also pay us a lease which contributes towards our economy.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we get rid of [SOV.GetFlag] §HRussian Military Access§!"
  TAJ_tajik_barrier: "Tajik Barrier"
  TAJ_tajik_barrier_desc: "Our nation serves as a barrier for us, as our high mountains slow the spread of dangerous ideas and beliefs, even in such a connected world in the modern day."
  TAJ_legacy_of_uto_idea: "Legacy of the UTO"
@@ -173,11 +173,17 @@
  iranic_confederation.20.a: "Great"
 
  pamir_conflict.1.t: "Attacking Forces Secure Batken"
- pamir_conflict.1.d: "Attacking forces have pushed out the defenders in Batken, and have secured victory in the region."
+ pamir_conflict.1.d: "Attacking forces have pushed out the defenders in Batken, and have secured key checkpoints and government institutions in the region."
  pamir_conflict.1.a: "Okay"
  pamir_conflict.2.t: "Defending Forces Hold the Line"
- pamir_conflict.2.d: ""
- pamir_conflict.2.a: ""
+ pamir_conflict.2.d: "The defending forces stationed in Batken were able to successfully hold off the attacking forces trying to capture key checkpoints in the region."
+ pamir_conflict.2.a: "Okay"
+ pamir_conflict.3.t: "Ceasefire Called"
+ pamir_conflict.3.d: "Due to inadequate progress, attacking forces have halted their offensive, and have agreed to a ceasefire."
+ pamir_conflict.3.a: "Okay"
+ pamir_conflict.4.t: "Our Forces Were Unable to Repel Attacks"
+ pamir_conflict.4.d: "Our forces were unable to hold the line, succumbing to all attacks launched at us by the aggressors."
+ pamir_conflict.4.a: "Unfortunate"
 # Decisions
  TAJ_radicalism_system: "Echoes of the Ummah"
  TAJ_radicalism_system_desc: "\n£TAJ_desctext_irp\n\n\n\nPoverty, corruption, nepotism and unemployment are amongst the grievances our people have held against our government. However, one stands above them all and is the final straw for many. Our suppression of Islamic practices have led some of our people to believe that religion is the answer to the problems within \n§H[TAJ.GetFlag] Tajikistan§!, and strongly believe a new state must emerge from our land. Some join groups such as the £TAJ_kingdom  §HIslamic Renaissance Party§!, and despite not being an active insurgency, occasional strings of attacks may appear randomly linked to the organization. Economic factors such as low GDP, or unemployment, make people more likely to leave the nation and potentially become radicalized. Certain political actions such as secularization may increase £TAJ_kingdom  §HIRP Influence§!. If at any point £TAJ_kingdom  §HIRP Influence§! reaches 100%, movements will appear that will attempt to destabilize us, the region and our close partners.\n\nCurrent £TAJ_kingdom  §HIRP§! Influence: [?TAJ_radical_influence]%"
@@ -244,6 +250,8 @@
  TAJ_situation_in_pamirs_desc: "\n£TAJ_desctext_pamir\n\n\n\nAs a result of poor choices when it came to Soviet high command during the shaping of the §HPamir§! borders, many exclaves were created and as a result, towns were disconnected from their mainland nations. A lack of negotiations and compromise has led to violence erupting occassionally between [KYR.GetFlag] [KYR.GetName], [TAJ.GetFlag] Tajikistan, and [UZB.GetFlag] Uzbekistan. In order to attack and take a §HPamir§! state, we must first fulfill logistical needs and then attack. If we manage to take a state and hold it continuously for §H9 months§!, then that state will be ours §Hpermanently§!."
  TAJ_attack_batken: "Launch an Assault on Batken"
  TAJ_attack_batken_desc: "Striking Batken will allow us to create a land corridor and easy access to the Northern Pamirs."
+ TAJ_batken_occupation: "Occupation of Batken"
+ TAJ_batken_occupation_desc: "We must hold Batken for about 270 days before the locals can finally accept Tajik rule over their territory."
 
 # Tooltips
  TAJ_if_delay_negotiations_TT: "§RIf we delay negotiations for too long, Badakhshani's will begin causing national instability until we resume talks§!"
@@ -280,7 +288,7 @@
  TAJ_every_muslim_neighbor_TT: "Gives §H5% Influence§! on every §HMuslim§! Neighbor"
  TAJ_requires_mechanic_TT: "§RCOME BACK TO THIS: MECHANIC REQUIRED FIRST§!"
  TAJ_integrate_agrarians_TT: "Will add §Y[TAJ.neutral_Social_L]§! into our coalition"
- TAJ_unlock_pamir_core_decisions_TT: "£decision_icon_small §YUnlocks§! Pamir Integration §YDecisions§!"
+ TAJ_unlock_pamir_core_decisions_TT: "£decision_icon_small §YUnlocks§! Situation in Pamirs §YDecisions§!"
  TAJ_unlock_paniran_decisions_TT: "£decision_icon_small §YUnlocks§! Reunification of Iranic Nations §YDecisions§!"
  TAJ_decrease_irp_influence_1_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-1§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
  TAJ_decrease_irp_influence_2_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-2§!\n(Current Influence: §H[? TAJ_radical_influence]%§!)"
