--- a/Changelog.txt
+++ b/Changelog.txt
@@ -80,7 +80,7 @@ v1.10.5
   - Fixed random "Vacant" leaders being present in ELS, UZB
 
  Content:
-  - NEW FOCUS TREES: Urals, Kuban
+  - NEW FOCUS TREES: Urals, Kuban, Romania, Gagauzia
   - Added additional decisions to a variety of different internal factions
   - Added some new events to Internal Factions for the religious factions
   - Added the ability to "Accept All Reactor Grade Fuel Purchases"
