--- a/localisation/english/MD_focus_ROM_l_english.yml
+++ b/localisation/english/MD_focus_ROM_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- romanian_focus: "Romania Focus Tree"
+ romanian_focus: "Romanian Focus Tree"
  #traits
  ROM_banker: "Backround: Banker"
  ROM_economist: "Backround: Economist"
@@ -53,7 +53,7 @@
  ROM_petrol_mafia: "Petrol Mafia"
  ROM_petrol_mafia_desc: "Ever since the collapse of the Ceausescu Regime and the lackluster Privatization, the black gold of Romania has fallen in the hands of people with power, money and foul intentions."
  ROM_ineffective_industry: "Ineffective Industry"
- ROM_ineffective_industry_desc: "The Romanian Industry, while big, is outdated. Equipement from the 50s and 60s, low pay, long working hours and unbearable conditions has proven to be a recipe for disaster."
+ ROM_ineffective_industry_desc: "The Romanian Industry, while big, is outdated. Equipment from the 50s and 60s, low pay, long working hours and unbearable conditions has proven to be a recipe for disaster."
  ROM_chest_brass: "Chest Out Of Brass"
  ROM_chest_brass_desc: "While Romanians don't agree on many things, they can agree on one. They love their country. When the time comes and the day calls, they will gladly join arms to once again defend their Motherland."
  ROM_intellectual: "Intellectual"
