--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -261,6 +261,16 @@
  TAJ_pamir_area: "Pamirs Region"
 
 # Tooltips
+ TAJ_puppet_if_win_TT: "£decision_icon_small §YUnlocks§! decision to puppet them as an §Hautonomous region§! if they win"
+ TAJ_UZB_revolt_TT: "Will start an §HIslamic§! uprising in [UZB.GetFlag] §HUzbekistan§!"
+ TAJ_willingness_to_accept_TT: "They are §HMore Willing§! to §HAccept§! if:\n- We have More than §H40 Relations§!"
+ TAJ_willingness_to_accept3_TT: "They are §HMore Willing§! to §HAccept§! if:\n- We have More than §H20 Relations§!"
+ TAJ_willingness_to_accept2_TT: "They are §HMore Willing§! to §HAccept§! if:\n- We have more than §H40 Relations§!\n- We are of the same §HIdeology§!"
+ TAJ_willingness_to_accept_strong_TT: "Their §HWillingness§! to Accept is §GStrong§! by Default"
+ TAJ_willingness_to_accept_medium_TT: "Their §HWillingness§! to Accept is §YMedium§! by Default"
+ TAJ_willingness_to_accept_low_TT: "Their §HWillingness§! to Accept is §RLow§! by Default"
+ TAJ_effect_if_they_accept_TT: "§HEffect if they Accept:§!"
+ TAJ_effect_if_we_accept_TT: "§HEffect if we Accept:§!"
  TAJ_if_delay_negotiations_TT: "§RIf we delay negotiations for too long, Badakhshani's will begin causing national instability until we resume talks§!"
  TAJ_peaceful_decentralization_TT: "§RWe will be only be able to pursue decentralization if we choose to go down this path§!"
  TAJ_will_disable_peaceful_TT: "§RWe will be unable to pursue decentralization if we choose to go down this path§!"
